tests/paczka1/fuzzy1/97335491.err
Error in line 7: WgeASXplS S208 117Ä2
Error in line 15: NFtCZpNg S341 32,4
Error in line 6: WgeASXplS S208 29,0
Error in line 23: J2su A57 31,3
Error in line 25: WgeASXplS S341 92,0
Error in line 31: NFtCZpNg A567 62,1
Error in line 19: Njq4k4yLn S208 40,6
Error in line 32: NFtCZpNg A57 89,2
Error in line 29: J2su S208 26,1
